--- a/src/mas/targets/targets_steekproefontwerp_pilootfase.Rmd
+++ b/src/mas/targets/targets_steekproefontwerp_pilootfase.Rmd
@@ -230,7 +230,7 @@ list(
       path = openheid_landschap_file,
       punten_sf = plus_sb,
       gebied = perimeters_data,
-      cutlevels = c(1.3, 1.4, 1.5),
+      cutlevels = c(1.25, 1.35, 1.51),
       class_labels = c("GL", "HGL", "HOL", "OL")),
     pattern = map(perimeters_data, plus_sb)
   ),
@@ -252,23 +252,31 @@ list(
 
 ```{targets steekproeftrekking}
 list(
-  tarchetypes::tar_group_by(
-    steekproefkader_per_stratum,
-    steekproefkader_finaal,
-    is_sbp,
-    openheid_klasse
-  ),
   tar_target(
     allocatie_df,
     allocatie(steekproefkader = steekproefkader_finaal,
               min_samplesize = 30,
-              target_samplesize = 300,
+              target_samplesize = 350,
               allocatie_prop_minimum = 0.01,
-              allocatie_binnen_sbp = 0.5)
+              allocatie_binnen_sbp = 0.5,
+              allocatie_leemstreek = 300/350,
+              ol_strata = c("OL", "HOL"))
   ),
   tarchetypes::tar_group_by(
     allocatie_per_stratum,
     allocatie_df,
+    Naam,
+    is_sbp,
+    openheid_klasse
+  ),
+  tarchetypes::tar_group_by(
+    steekproefkader_per_stratum,
+    steekproefkader_finaal %>%
+      semi_join(allocatie_df
+                %>%
+                  select(Naam, is_sbp, openheid_klasse),
+                by = c("Naam", "is_sbp", "openheid_klasse")),
+    Naam,
     is_sbp,
     openheid_klasse
   ),
